# shard-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: aur-publish.yml  pylint.yml
shard/: config.py
shard_cli/: __main__.py  commands.py  config.py  utils.py
src/: config.py  main.py  main.rs  utils.rs
