[tool.poetry]
name = "shard"
version = "0.1.0"
description = "A terminal companion for your Obsidian.md vault"
authors = ["WolfQuery foxtailoromis@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.3"
python-frontmatter = "^1.0"
rich = "^13.0"

[tool.poetry.scripts]
shard = "shard.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
